# binder-billing-crm

./: .env.example  .gitignore  AGENTS.md  API_CONTRACT.md  API_EXAMPLES.md  ARCHITECTURE.md  BACKEND_DEFERRED_CAPABILLITES_SPECIFICATION.md  BACKEND_PROJECT_RULES.md  BACKEND_SPEC.md  CLAUDE.md  DEV_SETUP.md  DOMAIN_AUDIT_PROMPT.md  ERROR_CONTRACT_AUDIT.md  FEATURES_DOCUMENTATION.md  FRONTEND_READINESS_CHECKLIST.md  INSTALLATION_GUIDE.md  INTEGRATION_GUIDE_HE.md  MISSING_TEST.md  PROJECT_RULES.md  QUICK_REFERENCE.md  README.md  REFACTOR_SESSION_1.md  SPRINT_2_IMPLEMENTATION.md  SPRINT_2_QUICK_REFERENCE.md  SPRINT_3_FORMAL_SPECIFICATION.md  SPRINT_3_IMPLEMENTATION_SUMMARY.md  SPRINT_4_EXECUTION_PROMPT_CLAUDE.md  SPRINT_4_IMPLEMENTATION_SUMMARY.md  SPRINT_4_TASK_BREAKDOWN.md  SPRINT_4_TEST_PLAN.md  SPRINT_5_FILES.md  SPRINT_5_FORMAL_SPECIFICATION.md  SPRINT_5_IMPLEMENTATION_SUMMARY.md  SPRINT_6.1_COMPLETION_REPORT.md  SPRINT_6_FORMAL_SPECIFICATION.md  SPRINT_6_FREEZE_DECLARATION.md  SPRINT_6_TASK_BREAKDOWN.md  TODO.md  TODO_Execution Order.md  TODO_TAX_CALCULATION.md  (+34 more)
tax_rules_config/: README.md  pyproject.toml
tax_rules_config/app/tax_rules/: __init__.py  exceptions.py  policy.py  registry.py  sources.py  statutory.py  types.py  validations.py  vat_deduction.py
tax_rules_config/app/tax_rules/calendars/: __init__.py  calendar_2025.py  calendar_2026.py
tax_rules_config/app/tax_rules/financials/: __init__.py  constants_2024.py  constants_2025.py  constants_2026.py
tax_rules_config/app/tax_rules/obligations/: vat.py  (+5 more)
tax_rules_config/tests/: test_tax_rules_config.py
(+1565 files in other folders)
