[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tax-rules"
version = "2026.2"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["app"]

[tool.setuptools.package-dir]
"" = "app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["app"]
